--- a/src/ROMdb/Views/AddItemsView.fxml
+++ b/src/ROMdb/Views/AddItemsView.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="304.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddItemsController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="304.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddItemsController">
    <children>
       <VBox alignment="CENTER" prefHeight="382.0" prefWidth="345.0">
          <children>
@@ -52,7 +51,15 @@
                   </VBox>
                   <VBox alignment="BOTTOM_CENTER" prefHeight="29.0" prefWidth="47.0">
                      <children>
-                        <Button fx:id="button_saveVal" minHeight="25.0" mnemonicParsing="false" onAction="#addNewItem" text="Save">
+                        <Button fx:id="button_saveVal" minHeight="25.0" minWidth="47.0" mnemonicParsing="false" onAction="#addNewItem" text="Save">
+                           <font>
+                              <Font name="Times New Roman" size="12.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="button_finish" layoutX="14.0" layoutY="29.0" minHeight="25.0" mnemonicParsing="false" onAction="#finish" text="Finish">
                            <font>
                               <Font name="Times New Roman" size="12.0" />
                            </font>
@@ -66,12 +73,13 @@
             </HBox>
             <HBox alignment="CENTER">
                <children>
-                  <ListView fx:id="list_values" prefHeight="250.0" prefWidth="300.0" />
+                  <ListView fx:id="list_values" prefHeight="250.0" prefWidth="295.0" />
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
             </HBox>
+            <Label alignment="CENTER" prefHeight="26.0" prefWidth="360.0" text="Press finish for changes to take effect." />
          </children>
       </VBox>
    </children>
