--- a/src/ROMdb/Views/AddRequirementWindow.fxml
+++ b/src/ROMdb/Views/AddRequirementWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddRequirementController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddRequirementController">
    <children>
       <HBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -97,7 +97,7 @@
                               <Insets right="5.0" />
                            </HBox.margin>
                         </Label>
-                        <ComboBox fx:id="combo_build" prefWidth="155.0" />
+                        <TextField fx:id="field_build" disable="true" editable="false" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
@@ -110,7 +110,7 @@
                               <Font name="Times New Roman" size="13.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="combo_scicr" prefWidth="155.0" />
+                        <ComboBox fx:id="combo_scicr" onAction="#updateBuildField" prefWidth="155.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
