--- a/src/ROMdb/Views/MainMenuView.fxml
+++ b/src/ROMdb/Views/MainMenuView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="0.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.MainMenuController">
+<BorderPane minHeight="0.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.MainMenuController">
    <left>
       <VBox alignment="TOP_CENTER" style="-fx-background-color: lightgrey;">
          <children>
@@ -42,7 +42,7 @@
                   <Font name="Times New Roman" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="button_viewArchive" disable="true" mnemonicParsing="false" onAction="#viewArchive" prefHeight="25.0" prefWidth="135.0" text="View Archive">
+            <Button fx:id="button_viewArchive" mnemonicParsing="false" prefHeight="25.0" prefWidth="135.0" text="View Archive" visible="false">
                <font>
                   <Font name="Times New Roman" size="13.0" />
                </font></Button>
