--- a/src/ROMdb/Views/SCICRView.fxml
+++ b/src/ROMdb/Views/SCICRView.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -50,6 +52,13 @@
                         <TableColumn fx:id="tableColumn_build" prefWidth="136.0" text="Build" />
                         <TableColumn fx:id="tableColumn_baseline" prefWidth="105.0" text="Baseline" />
                     </columns>
+                     <contextMenu>
+                        <ContextMenu fx:id="contextMenu_scicr">
+                          <items>
+                            <MenuItem fx:id="conOption_archive" mnemonicParsing="false" onAction="#archiveSelected" text="Archive" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
                   </TableView>
                </children>
             </VBox>
